--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,13 @@
 @import "~bootstrap/scss/bootstrap";
+
+.form-container {
+  width: 400px;
+  background-color: rgb(149, 172, 236);
+  border-radius: 10px;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 30vh;
+  &:hover {
+    box-shadow: 5px 5px 5px deepskyblue;
+  }
+}
